# multi-ai-agent

./: README.md  pyproject.toml
src/multi_ai_agent_system/: crew.py  main.py
src/multi_ai_agent_system/config/: agents.yaml  base.py  tasks.yaml
