[project]
name = "multi_ai_agent_system"
version = "0.1.0"
description = "multi_ai_agent_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
multi_ai_agent_system = "multi_ai_agent_system.main:run"
run_crew = "multi_ai_agent_system.main:run"
train = "multi_ai_agent_system.main:train"
replay = "multi_ai_agent_system.main:replay"
test = "multi_ai_agent_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
